Tried again to fix mobile blue highlight

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
 	overflow:hidden;
 	position: relative;
 	background-color: #2C3531;
+	-webkit-tap-highlight-color: transparent;
 }
 .break {
 	height: 25px;
