Added new wordle button, attempting redirect

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -191,7 +191,7 @@ html {
 .list-desc {
 	font-family: "font", sans-serif;
 	font-size: 90%;
-	color: #D1E8E2;
+	color: #FFCB9A;
 	width: 30vw;
 	word-wrap:normal;
 	margin-top: 1vh;
