--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,10 +104,10 @@ body {
 	height: 400vh;
 }
 .sticky {
-	position: sticky;
-	top: 25vh;
-	opacity: 0;
-	margin-top: 25vh;
+	position: fixed;
+	top: 30vh;
+	opacity: 1;
+	margin-left: -100vw;
 }
 .sticky img{
 	height: 50vh;
@@ -136,101 +136,8 @@ body {
 
 
 
-.item {
-	text-align: center;
-	margin-top: 3vh;
-	text-decoration: none;
-	display: block;
-}
-.list-text {
-	font-family: "font", sans-serif;
-	font-size: 160%;
-	color: #D1E8E2;
-	text-decoration: none;
-	-webkit-transition: opacity 0.5s;
-	-o-transition: opacity 0.5s;
-	transition: opacity 0.5s;
-}
-.list-item {
-	cursor: pointer;
-	text-align:center;
-	width: -webkit-fit-content;
-	width: -moz-fit-content;
-	width: fit-content;
-	white-space: nowrap;
-	text-decoration: none;
-	margin-left: 0vw;
-	-webkit-transition: margin-left 1s, -webkit-transform 0.2s;
-	transition: margin-left 1s, -webkit-transform 0.2s;
-	-o-transition: margin-left 1s, transform 0.2s;
-	transition: margin-left 1s, transform 0.2s;
-	transition: margin-left 1s, transform 0.2s, -webkit-transform 0.2s;
-}
-.list-item:hover{
-	-webkit-transform: scale(1.1);
-		-ms-transform: scale(1.1);
-			transform: scale(1.1);
-}
-.list-item:hover div{
-	max-width: 50vw;
-}
-.list-item:hover .list-text{
-	opacity: 50%;
-}
-.list-item:hover .list-desc {
-	opacity: 50%;
-}
-.list-desc {
-	font-family: "font", sans-serif;
-	font-size: 90%;
-	color: #FFCB9A;
-	width: 30vw;
-	word-wrap:normal;
-	margin-top: 1vh;
-	text-decoration: none;
-	-webkit-transition: opacity 0.5s;
-	-o-transition: opacity 0.5s;
-	transition: opacity 0.5s;
-}
-.no-format{
-	display: inline;
-	font-family: "font", sans-serif;
-	font-size: 110%;
-	color: #D1E8E2;
-	text-decoration: none;
-}
-.languages {
-	margin-top: 0.5vh;
-	text-align: left;
-	display: inline-block;
-	width: -webkit-fit-content;
-	width: -moz-fit-content;
-	width: fit-content;
-	max-width: 0vw;
 
-	white-space: nowrap;
-	position: absolute;
-	-webkit-transition: max-width 1s;
-	-o-transition: max-width 1s;
-	transition: max-width 1s;
-}
-.language {
-	padding-left:10px;
-	font-family: "font", sans-serif;
-	font-size: 100%;
-	text-decoration: none;
-}
-.right_page {
-	width: 100vw;
 
-	margin-left: 100vw;
-	top: 10vh;
-	height: 90vh;
-	position: relative;
-	-webkit-transition: margin-left .75s;
-	-o-transition: margin-left .75s;
-	transition: margin-left .75s;
-}
 .wordle_content {
 	width: 100vw;
 	height: 90vh;
@@ -355,42 +262,7 @@ body {
 	color: #90d69b;
 	border: 2px solid #90d69b;
 }
-.menu-button, .menu-button:visited, .menu-button:active {
-	-moz-user-select: none;
-	-ms-user-select: none;
-		user-select: none;
-	color:#D1E8E2;
-	z-index: 4;
-	margin-top:20px;
-	top: 0vh;
-	font-size: 150%;
-	max-block-size:100%;
-	size: 50px;
-	border:none;
-	text-decoration: none;
-	font-family: "Button", sans-serif;
-	outline: none;
-	padding-right:30px;
-	white-space:normal;
-	position:relative;
-	-o-transition: opacity .3s, top .3s, color .3s;
-	transition: opacity .3s, top .3s, color .3s;
-	-webkit-transition: opacity .3s, top .3s, color .3s;
-}
-.menu-button:hover {
-	top: 0.1vh;
-	opacity: 50%;
-}
-.pic_title {
-	width: 80%;
-	margin-top: 16vh;
-	position: absolute;
-	text-align: center;
-	opacity: 0;
-	-webkit-transition: opacity .75s;
-	-o-transition: opacity .75s;
-	transition: opacity .75s;
-}
+
 @media only screen and (max-aspect-ratio: 1/1) {
 	.alphabet {
 		width: 100vw;
