Added framework for scrolling mechanic

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,13 +101,15 @@ body {
 
 .sticky_container {
 	margin-left: 5vw;
-	height: 400vh;
+	margin-top: 0;
+	height: 100vh;
 }
 .sticky {
-	position: fixed;
+	position: sticky;
 	top: 30vh;
-	opacity: 1;
+	opacity: 0;
 	margin-left: -100vw;
+
 }
 .sticky img{
 	height: 50vh;
