--- a/404.css
+++ b/404.css
@@ -1,81 +1,36 @@
 @font-face {
-	font-family: "Segoe-UI-Variable";
-	src: url("fonts/Righteous-Regular.woff");
+	font-family: "font";
+	src: url("fonts/Roboto-Bold.woff");
 
 }
 
 body {
     background-color: #2C3531;
-
 }
 
-
-.door {
-
-    left: 38vw;
+.text {
+    margin-left: 10vw;
     position: absolute;
-    top: 37.5%;
-    background-color: #2C3531;
-    width: 400px;
-
-    border: 0 inset rgba(231, 231, 210, 0.65);
-
-    
-
-    animation: door 1s 0.5s forwards cubic-bezier(.99,.03,.38,.76);
-}
-
-@keyframes door {
-    0% {
-        border-width: 0px;
-        height: 0;
-    }
-    100% {
-        border-width: 20px;
-        height: 225px;
-    }
-}
-
-
-.circle_text{
-
-    left: 40vw;
-    position: absolute;
-    top: 37.5%;
-
-    font-size: 200px;
-    font-family: "Segoe-UI-Variable", sans-serif;
-    color: #FFCB9A;
-
-    width: 0%;
-    overflow: hidden;
-    animation: text_intro 1s 1.5s forwards;
-
-}
-
-.circle_text a{
-
-    font-family: "Segoe-UI-Variable", sans-serif;
-    color: #FFCB9A;
+    top: 30vh;
+    font-family: "font", sans-serif;
+    font-size: 4vw;
+    color:#FEEAFA;
     text-decoration: none;
-
 }
-
-@keyframes blink{
-    0% {
-        opacity: 100;
-    }
-    100% {
-        opacity: 0;
-    }
+.text a{
+    text-decoration: none;
+    color: #a298a0;
 }
-
-@keyframes text_intro{
-    0% {
-        width: 0%;
-    }
-    100% {
-        width: 350px;
-
-    }
+.back_image {
+	margin-top: 0;
+	margin-left: 0;
+	position: fixed;
+	height: 100vh;
+	width: 140vw;
+	z-index: -10;
+	opacity: 0.2;
+}
+.back_image img{
+	height: 110%;
+	width: 100%;
 }
