--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,27 +1,22 @@
-#wrapper{
-	position: absolute;
-	width: 100%;
 
-}
 html {
 	margin:0;
 	scroll-behavior: smooth;
-	overflow-x:hidden;
 	width: 100%;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.page::-webkit-scrollbar {
+	display: none;
+  }
+  
 body {
-
-	width: 100%;
-	background-color: #2C3531;
-	-webkit-tap-highlight-color: transparent;
+	background-color: #1C1511;
 	position: relative;
-	margin-top: 0;
+	margin: 0;
+	overflow-y: hidden;
 }
 * {
 	-webkit-tap-highlight-color: transparent;
-}
-.break {
-	height: 25px;
 }
 @font-face {
 	font-family: "font";
@@ -31,15 +26,18 @@ body {
 	font-family: "title-font";
 	src: url("fonts/Roboto-Bold.woff");
 }
+@font-face {
+	font-family: "thick-font";
+	src: url("fonts/Roboto-Black.woff");
+}
 .font {
 	font-family: "font", sans-serif;
-	color: #FEEAFA;
+	color: #FEEAFAff;
 	font-size: 30px;
 }
 .buttons {
-	background: #191e1bf5;
 	z-index: 2;
-	position:absolute;
+	position:fixed;
 	top: 0;
 	height: 60px;
 	width: 100vw;
@@ -54,7 +52,7 @@ body {
 	background-size: 40%;
 	background-repeat: no-repeat;
     background-position: 50% 50%;
-	background-color: #191e1bf5;
+	background-color: #191e1b00;
 	transition: all .5s;
 	-moz-transition: all .5s;
 	-ms-transition: all .5s;
@@ -63,9 +61,12 @@ body {
 
 }
 .menu_button:hover{
+	background-color: #191e1bf5;
 	filter: invert();
 	-webkit-filter: invert();
 }
+
+/*questions and answers for extended bio*/
 .que {
 	font-family: "title-font", sans-serif;
 	font-size: 70px;
@@ -74,23 +75,167 @@ body {
 	font-size: 30px;
 }
 
+/* main scroll container*/
 .page {
-	width: 100vw;
-	height: 400vh;
-	z-index: 1;
-	--too_small: "false";
-	top: -2vh;
-	margin-left: 0vw;
-	position: absolute;
-	-webkit-transition: margin-left .75s;
-	-o-transition: margin-left .75s;
-	transition: margin-left .75s;;
-	-webkit-animation: title_intro 2s;;
-			animation: title_intro 2s;
-	background-color: #2C3531;
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
 
+	width: 60vw;
+	padding-right: 20vw;
+	padding-left: 20vw;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+
+	background-color: #f2eee000;
+	height: 100vh;
+
+	position: absolute;
+	scroll-snap-type: y mandatory;
+	overflow-y: scroll;
+	overflow-x: visible;
+	z-index: 1;
+
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-ms-border-radius: 20px;
+	-o-border-radius: 20px;
+
+	transition: top 1s;
+	-webkit-transition: top 1s;
+	-moz-transition: top 1s;
+	-ms-transition: top 1s;
+	-o-transition: top 1s;
+	
 }
 
+.scrollItem {
+	position: relative;
+	height: 100vh;
+	scroll-snap-align: start;
+	overflow:hidden;
+}
+
+.projects_title{
+	font-family: "thick-font", "sans-serif";
+	font-size: 120px;
+	text-align: center;
+	color: #FEEAFAff;
+	position: relative;
+	top: 5vh;
+
+	text-decoration: underline;
+	text-decoration-thickness: 10px;
+	opacity: 1;
+	transition: all 1s;
+	-webkit-transition: all 1s;
+	-moz-transition: all 1s;
+	-ms-transition: all 1s;
+	-o-transition: all 1s;
+}
+.projects {
+	overflow: visible;
+}
+.gridcontainer {
+	position: relative;
+	top:0vh;
+	left: -5vw;
+	width: 80vw;
+	height: 60vh;
+	overflow-x: visible;
+	display: grid;
+	grid-template-columns: auto auto auto; /*four equal columns*/
+	grid-template-rows: auto auto;/*two equal rows*/
+	gap: 20px;
+
+}
+.image {
+	right: 5%;
+	height: 30vh;
+	width: 20vw;
+	overflow: hidden;
+	position: relative;
+	opacity: 1;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	background-color: #2C3531;
+}
+.image:hover img {
+	opacity: 0.2;
+}
+.image:hover .item {
+	opacity: 1;
+}
+.image img{
+	max-height: 30vh;
+	align-self:center;
+	position: absolute;
+	opacity: 1;
+	transition: opacity .5s;
+	-webkit-transition: opacity .5s;
+	-moz-transition: opacity .5s;
+	-ms-transition: opacity .5s;
+	-o-transition: opacity .5s;
+}
+.item {
+
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	margin-bottom: 10%;
+	opacity: 0;
+	transition: opacity .5s;
+	-webkit-transition: opacity .5s;
+	-moz-transition: opacity .5s;
+	-ms-transition: opacity .5s;
+	-o-transition: opacity .5s;
+
+}
+.title {
+	opacity: 1;
+	font-family: "title-font", sans-serif;
+	font-size: 40px;
+	text-decoration: underline;
+	text-decoration-color: #FEEAFA00;
+	-moz-text-decoration-color: #FEEAFA00;
+	text-underline-offset: 5px;
+	transition: all .3s;
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-ms-transition: all .3s;
+	-o-transition: all .3s;
+}
+.desc {
+	opacity: 1;
+	font-size: 20px;
+}
+.link {
+	font-size: 20px;
+	text-decoration: none;
+	font-family: "title-font", "sans-serif";
+	color: #FEEAFAff;
+	text-decoration: underline;
+	text-decoration-color: #FEEAFA00;
+	text-underline-offset: 5px;
+	transition: all .5s;
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-ms-transition: all .3s;
+	-o-transition: all .3s;
+	-moz-text-decoration-color: #FEEAFA00;
+}
+.link:hover {
+	text-decoration-color: #FEEAFAff;
+	text-underline-offset: 10px;
+	-moz-text-decoration-color: #FEEAFAff;
+}
 .back_image {
 	margin-top: 0;
 	margin-left: 0;
@@ -111,18 +256,24 @@ body {
 
 }
 
-
 .splash {
-	width: 100vw;
-	margin-top: 20vh;
+
+	scroll-snap-align: start;
+	z-index: 10;
+	width: 100%;
 	opacity: 0;
 	transition: opacity 1s;
 	-webkit-transition: opacity 1s;
 	-moz-transition: opacity 1s;
 	-ms-transition: opacity 1s;
 	-o-transition: opacity 1s;
-	position: fixed;
-
+}
+.extendedbio {
+	left: 5%;
+	width: 80%;
+	padding-top: 10vh;
+	height: 90vh;
+	max-height: 90vh;
 }
 
 .name {
@@ -130,208 +281,52 @@ body {
 	font-family: "title-font", sans-serif;
 	color: #FEEAFA;
 	font-size: 150px;
+	transition: color .5s;
+	-webkit-transition: color .5s;
+	-moz-transition: color .5s;
+	-ms-transition: color .5s;
+	-o-transition: color .5s;
+	position: absolute;
+	width: 100%;
+	margin-top: 30%;
+	transform: translateY(-30%);
+	-webkit-transform: translateY(-30%);
+	-moz-transform: translateY(-30%);
+	-ms-transform: translateY(-30%);
+	-o-transform: translateY(-30%);
 }
 .bio{
 	text-align: center;
 	font-family: "font", sans-serif;
 	color: #FEEAFA;
 	font-size: 25px;
-	left: 5vw;
-}
-
-.label-text {
-	position: fixed;
-	width: 50vw;
-	text-align: center;
-	margin-left: 50vw;
-	margin-top: 40vh;
-	font-family: "title-font", sans-serif;
-	color: #FEEAFA;
-	font-size: 80px;
-	opacity: 0;
-}
-.label-desc {
-	width: 100%;
-	text-align: center;
-	font-family: "font", sans-serif;
-	color: #FEEAFA;
-	font-size: 30px;
-}
-.label-link {
-	z-index: 100;
-	width: 100%;
-	text-align: center;
-	font-family: "title-font", sans-serif;
-	color: #FEEAFA;
-	text-decoration: none;
-	font-size: 20px;
-}
-.sticky_container {
-	margin-left: 5vw;
-	margin-top: 0;
-	height: 100vh;
-	width: 50vw;
-}
-.sticky {
-	height: fit-content;
-	position: sticky;
-	top: 25vh;
-	opacity: 0;
-	margin-left: -100vw;
-	width: 50vw;
-}
-.sticky img{
-	width: 45vw;
-
-}
-#euler {top: 15vh;}
-#fant img{
-	border-radius: 25px;
-	-webkit-border-radius: 25px;
-	-moz-border-radius: 25px;
-	-ms-border-radius: 25px;
-	-o-border-radius: 25px;
-}
-#extendedbio {
-	top: 15vh;
-}
-.wordle_content {
-	width: 100vw;
-	height: 90vh;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-		-ms-flex-direction: column;
-			flex-direction: column;
-	-webkit-box-align: center;
-		-ms-flex-align: center;
-			align-items: center;
-}
-.back {
-	z-index: 100;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-user-select: none;
-	cursor: pointer;
-	font-family: "font", sans-serif;
-	color: #D1E8E2;
-	font-size: 160%;
-	margin-left: 10vw;
+	transition: color .5s;
 	position: absolute;
-	opacity: 0;
-	margin-top: 0vw;
-	transition:opacity .75s;
-	-webkit-transition:opacity .75s;
-	-moz-transition:opacity .75s;
-	-ms-transition:opacity .75s;
-	-o-transition:opacity .75s;
-}
-.alphabet {
-	outline: none;
-	-moz-user-select: none;
-	 -ms-user-select: none;
-		 user-select: none;
-	-webkit-user-select: none;
-	-webkit-tap-highlight-color: transparent;
-	cursor: pointer;
-	font-family: "font", sans-serif;
-	color: #D1E8E2;
-	font-size: 160%;
-	margin-top: 5vh;
-	height: -webkit-fit-content;
-	height: -moz-fit-content;
-	height: fit-content;
-	width: fit-content;
-	text-align: center;
-	-webkit-transition: opacity .25s;
-	-o-transition: opacity .25s;
-	transition: opacity .25s;
-}
-.alphabet_letter {
-	outline: none;
-	font-family: "font", sans-serif;
-	color: #D1E8E2;
-	font-size: 160%;
-	height: -webkit-fit-content;
-	height: -moz-fit-content;
-	height: fit-content;
-	display: inline-block;
-	margin-right: 2vw;
-	transition: color .5s, border .5s;
-}
-.letter_wrong {
-	color: #63716d;
-}
-.letter_in{
-	color: #f78379;
-}
-.letter_correct {
-	color: #90d69b !important;
-}
-.guesses {
-	-moz-user-select: none;
-	-ms-user-select: none;
-		user-select: none;
-	margin-top: 3vw;
-	height: -webkit-fit-content;
-	height: -moz-fit-content;
-	height: fit-content;
-	font-family: "font", sans-serif;
-	color: #D1E8E2;
-	font-size: 160%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-}
-.square {
-	-moz-user-select: none;
-	-ms-user-select: none;
-		user-select: none;
-	margin-right: 1vw;
-	text-align:center;
-	font-size:200%;
-	width: 60px;
-	line-height: 65px;
-	position:relative;
-	background-color: #4C5551;
-	border: 2px solid #FFCB9A;
-	border-radius: 5px;
-	-webkit-transition: border .5s, background-color .5s, color .5s;
-	-o-transition: border .5s, background-color .5s, color .5s;
-	transition: border .5s, background-color .5s, color .5s;
-}
-.selected_square {
-	border: 3px solid #F1F8F2;
-	background-color: #5C6561;
-}
-.wrong_square {
-	color: #63716d;
-	border: 2px solid #63716d;
-}
-.in_square {
-	color: #f78379;
-	border: 2px solid #f78379;
-}
-.correct_square {
-	color: #90d69b;
-	border: 2px solid #90d69b;
+	width: 100%;
+	margin-top: 45%;
+	transform: translateY(-45%);
+	-webkit-transform: translateY(-45%);
+	-moz-transform: translateY(-45%);
+	-ms-transform: translateY(-45%);
+	-o-transform: translateY(-45%);
 }
 
-@media only screen and (max-aspect-ratio: 1/1) {
-	.alphabet {
-		width: 100vw;
-	}
-	.button_margin {
-		width: 100vw;
-		--width_value: thin;
-	}
-	.back {
-		margin-left: 30vw;
-	}
-	.alphabet_letter {
-		margin-right: 2vw;
-	}
+.contact {
+	text-decoration: none;
+	font-family: "thick-font", "sans-serif";
+	text-decoration: underline;
+	color: #FEEAFA;
+	text-underline-offset: 5px;
+	text-decoration-color: #FEEAFA22;
+	transition: all .5s;
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	-ms-transition: all .5s;
+	-o-transition: all .5s;
+	-moz-text-decoration-color: #FEEAFA22;
+}
+.contact:hover {
+	text-decoration-color: #FEEAFAff;
+	text-underline-offset: 10px;
+	-moz-text-decoration-color: #FEEAFAff;
 }
