--- a/stylesheet.css
+++ b/stylesheet.css
@@ -143,9 +143,9 @@ body {
 	height: 60vh;
 	overflow-x: visible;
 	display: grid;
-	grid-template-columns: auto auto auto; /*four equal columns*/
+	grid-template-columns: auto auto auto; /*three equal columns*/
 	grid-template-rows: auto auto;/*two equal rows*/
-	gap: 20px;
+	gap: 40px;
 
 }
 .image {
@@ -172,6 +172,8 @@ body {
 .image:hover .item {
 	opacity: 1;
 }
+
+
 .image img{
 	max-height: 30vh;
 	align-self:center;
@@ -184,7 +186,6 @@ body {
 	-o-transition: opacity .5s;
 }
 .item {
-
 	width: 100%;
 	text-align: center;
 	position: absolute;
@@ -202,6 +203,7 @@ body {
 	-o-border-radius: 10px;
 
 }
+
 .title {
 	opacity: 1;
 	font-family: "title-font", sans-serif;
@@ -240,6 +242,7 @@ body {
 	text-underline-offset: 10px;
 	-moz-text-decoration-color: #FEEAFAff;
 }
+
 .back_image {
 	margin-top: 0;
 	margin-left: 0;
@@ -334,4 +337,14 @@ body {
 	text-decoration-color: #FEEAFAff;
 	text-underline-offset: 10px;
 	-moz-text-decoration-color: #FEEAFAff;
+}
+
+
+@media only screen and (max-width: 1200px) {
+	.que {
+		font-size: 50px;
+	}
+	.ans {
+		font-size: 20px;
+	}
 }
