--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,68 +1,80 @@
 @font-face {
-	font-family: consolas;
-	src: url("fonts/Consolas.woff")
+	font-family: DIN;
+	src: url("fonts/DIN.woff2")
 }
+
 body {
 	background-color: #292429;
 	margin: 0;
 }
 
 .container {
-	position: absolute;
-	margin-left: 50vw;
-	margin-top: 50vh;
-	transform: translate(-50%, -50%);
+	margin-top: calc(50px + 20vh);
+	display: flex;
+	flex-direction: row;
 	text-align: left;
-	font-family: consolas;
+	font-family: DIN;
 	color: #e8e6e3;
 }
-
-.intro {
-	font-size: 20px;
+.bio {
+	margin-left: 10vw;
+	width: 50vw;
+	text-align: left;
 }
-
-
-.project::after {
-	content: '\A';
-    white-space: pre;
-}
-.project{
-	display: block;
-	font-size: 20px;
-	color: #e8e6e3;
-	margin-bottom: 8px;
-	transition: color .5s;
-}
-.project:hover {
-	color: #a8a6a3;
-}
-.project p {
-	margin-left: 15px;
+.bio img {
+	height: 60px;
 	display: inline-block;
-	text-decoration: none !important;
-	font-size: 12px;
+	margin-right: 15px;
+	opacity: 1;
+	transition: opacity .5s;
+	cursor: pointer;
 }
+.bio img:hover {
+	opacity: 0.5;
+}
+.portfolio {
+	width: 50vw;
+	padding-left: 10vw;
+}
+.item { /*.portfolio div*/
+	padding: 20px;
+	margin-bottom: 10px;
+	background-color: #343134;
+	transition: background-color .5s;
+	border-radius: 15px;
+	width: fit-content;
+}
+.item:hover {
+	background-color: #6868686f;
+}
+.item p:nth-of-type(1){
+	margin: 0;
+	font-size: 30px;
+}
+.item p:nth-of-type(2){
+	font-size: 15px;
+}
+.bio {font-size: 20px;}
 
+#name {
+	font-size: 70px;
+	margin: 0;
+	display: inline;
+	transition: color .5s;
+	cursor: pointer;
+}
+#name:hover {
+	color: #adacaa;
+}
 .contact {
 	font-size: 20px;
 	color: #e8e6e3;
 	transition: color .5s;
 }
 .contact:hover {
-	color: #a8a6a3;
+	color: #c4c3c0;
+}
+#c_title {
+	font-size: 45px;
 }
 
-
-#name {
-	font-size: 70px;
-	text-align: center;
-	margin: 0;
-}
-#contact_title {
-	font-size: 35px;
-	text-align: center;
-}
-#projects_title {
-	font-size: 40px;
-	text-align:center;
-}
