--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,3 +76,16 @@ body {
 	font-size: 45px;
 }
 
+
+@media only screen and (max-width: 800px) {
+	.container {
+		flex-direction: column;
+	}
+	.bio {
+		width: 70vw;
+		margin-bottom: 20px;
+	}
+	.portfolio {
+		width: 70vw;
+	}
+}
