--- a/palette/stylesheet.css
+++ b/palette/stylesheet.css
@@ -21,6 +21,7 @@ body {
     flex: auto;
     height: 100vh;
 }
+
 .col p{
     padding-top: 60vh;
     width: 100%;
@@ -75,7 +76,7 @@ body {
 	}
     .col {
         height: fit-content;
-        width: 100vw;
+        width: 100vw !important;
         justify-content: left;
         align-items: center;
     }
