--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,18 +40,29 @@ body {
 	padding: 20px;
 	margin-bottom: 10px;
 	background-color: #323032;
-	transition: background-color .5s;
 	border-radius: 15px;
 	width: fit-content;
+
+	transition: padding .5s, border-radius .5s, background-color .5s;
 }
 .item:hover {
 	background-color: #6868686f;
+	border-radius:30px;
 }
-.item p:nth-of-type(1){
+.item:hover p:nth-of-type(3){opacity:1;}
+
+.item p:nth-of-type(1){ /*title*/
 	margin: 0;
 	font-size: 30px;
 }
-.item p:nth-of-type(2){font-size: 17px;}
+.item p:nth-of-type(2){font-size: 17px;} /*description*/
+.item p:nth-of-type(3){/*language*/
+	font-size: 17px; 
+	opacity: 0; 
+	transition: opacity .5s;
+	color:rgb(178, 178, 178);
+}
+
 .bio {font-size: 20px;}
 
 #name {
