--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,11 @@
 body {
 	background-color: #292429;
 	margin: 0;
-	overflow: hidden;
 }
 
 #menu{
+	position: fixed;
+	top: 0;
 	width: 100vw;
 	height: 60px;
 	background-color: #191419;
@@ -23,9 +24,12 @@ body {
 	transition: transform .5s;
 }
 #fullmenu{
-	position: absolute;
+	position: fixed;
+	top: 60px;
 	height: 100vh;
-	width: 25vw;
+	width: fit-content;
+	padding: 50px;
+
 	transition: margin .5s;
 	margin-left: -50vw;
 	z-index: 10;
@@ -129,6 +133,7 @@ body {
 #c_title {
 	font-size: 45px;
 }
+
 
 
 @media only screen and (max-width: 800px) {
