--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 }
 #content {
+	margin-top: 10vh;
 	width: 100vw;
 	height: 90vh;
 	display: -webkit-box;
@@ -134,15 +135,9 @@ body {
 }
 
 #new_button {
-    bottom: 100px;
+    bottom: 20px;
 }
-#home_button {
-    bottom: 5px;
-    background-color: #292429;
-    padding: 10px;
-    border-radius: 15px;
-    color:#e8e6e3;
-}
+
 
 @media only screen and (max-width: 800px) {
 	
